# IGen

./: LICENSE  README.md
benchmarks/: .gitignore  run_benchmarks.py
benchmarks/ATLAS_gemm/: CMakeLists.txt  build_and_run.py  dgemm_bench_ddi.cpp  dgemm_bench_f64i.cpp  dgemm_bench_scalar.cpp  dgemm_simple.cpp  dgemm_simple_ddi.cpp  dgemm_simple_f64i.cpp  main.cpp  run_igen.py  write_csv.h
benchmarks/ATLAS_gemm/atlas_ddi/: atlas_aux.h  atlas_level1.h  atlas_level2.h  atlas_level3.h  atlas_misc.h  cblas.h  igen_ATL_col2blk.c  igen_ATL_dNBmm_b0.c  igen_ATL_dNBmm_b1.c  igen_ATL_gemm.c  igen_ATL_gemmXX.c  igen_ATL_mmJIK.c  igen_ATL_putblk.c  igen_ATL_row2blkT.c  igen_cblas_dgemm.c  igen_dummy_symbols.c
benchmarks/ATLAS_gemm/atlas_f64i/: atlas_aux.h  atlas_level1.h  atlas_level2.h  atlas_level3.h  atlas_misc.h  cblas.h  igen_ATL_col2blk.c  igen_ATL_dNBmm_b0.c  igen_ATL_dNBmm_b1.c  igen_ATL_gemm.c  igen_ATL_gemmXX.c  igen_ATL_mmJIK.c  igen_ATL_putblk.c  igen_ATL_row2blkT.c  igen_cblas_dgemm.c  igen_dummy_symbols.c
benchmarks/ATLAS_gemm/atlas_include/ATLAS/include/: atlas_altivec.h  atlas_asm.h  atlas_aux.h  atlas_cplxsimd.h  atlas_enum.h  atlas_f77.h  atlas_genparse.h  atlas_kern3.h  atlas_kernel3.h  atlas_lapack.h  atlas_level1.h  atlas_level2.h  atlas_level3.h  atlas_lvl2.h  atlas_lvl3.h  atlas_misc.h  atlas_mmparse.h  atlas_mvparse.h  atlas_pca.h  atlas_pkblas.h  atlas_prefetch.h  atlas_r1.h  atlas_r1parse.h  atlas_simd.h  atlas_threads.h  atlas_tlvl3.h  atlas_tst.h  f77wrap_lapack.h
benchmarks/ATLAS_gemm/atlas_include/include/atlas/: atlas_buildinfo.h  atlas_cNCmm.h  atlas_cher2.h  atlas_cher2_L1.h  atlas_cher2_L2.h  atlas_cmvn.h  atlas_cmvn_L1.h  atlas_cmvn_L2.h  atlas_cmvnkernels.h  atlas_cmvt.h  atlas_cmvt_L1.h  atlas_cmvt_L2.h  atlas_cmvtkernels.h  atlas_cr1.h  atlas_cr1_L1.h  atlas_cr1_L2.h  atlas_cr1kernels.h  atlas_cr2.h  atlas_cr2_L1.h  atlas_cr2_L2.h  atlas_cr2kernels.h  atlas_csyr.h  atlas_csyrNX.h  atlas_csyr_L1.h  atlas_csyr_L2.h  atlas_csysinfo.h  atlas_dNCmm.h  atlas_dlamch.h  atlas_dmvn.h  atlas_dmvn_L1.h  atlas_dmvn_L2.h  atlas_dmvnkernels.h  atlas_dmvt.h  atlas_dmvt_L1.h  atlas_dmvt_L2.h  atlas_dmvtkernels.h  atlas_dr1.h  atlas_dr1_L1.h  atlas_dr1_L2.h  atlas_dr1kernels.h  (+74 more)
benchmarks/ATLAS_gemm/atlas_source/: ATL_col2blk.c  ATL_dNBmm_b0.c  ATL_dNBmm_b1.c  ATL_gemm.c  ATL_gemmXX.c  ATL_mmJIK.c  ATL_putblk.c  ATL_row2blkT.c  cblas_dgemm.c  dummy_symbols.c
benchmarks/ATLAS_gemm/benchmark/: benchmark_config1.h  benchmark_config2.h  benchmark_config3.h  benchmark_inline.h  helpers.h
benchmarks/FFNN_mnist/: CMakeLists.txt  build_and_run.py  main.cpp  run_igen.py
benchmarks/FFNN_mnist/ffnn_source/: ffnn.cpp  ffnn.h  ffnn_vec.cpp
benchmarks/FFNN_mnist/igen/: igen_ffnn_avx_ddi.cpp  igen_ffnn_avx_f64i.cpp  igen_ffnn_ddi.cpp  igen_ffnn_f64i.cpp
benchmarks/FFNN_mnist/libraries/: boost_common.h  bst_ffnn.cpp  fil_ffnn.cpp  filib_common.h  gal_ffnn.cpp  gaol_common.h
benchmarks/FFNN_mnist/mnist/mnist_images/: img0.txt  img1.txt  img10.txt  img11.txt  img12.txt  img13.txt  img14.txt  img15.txt  img16.txt  img17.txt  img18.txt  img19.txt  img2.txt  img20.txt  img21.txt  img22.txt  img23.txt  img24.txt  img25.txt  img26.txt  img27.txt  img28.txt  img29.txt  img3.txt  img30.txt  img31.txt  img32.txt  img33.txt  img34.txt  img35.txt  img36.txt  img37.txt  img38.txt  img39.txt  img4.txt  img40.txt  img41.txt  img42.txt  img43.txt  img44.txt  (+60 more)
benchmarks/FFNN_mnist/mnist/mnist_nets/: mnist_relu_3_10.txt  mnist_relu_3_20.txt  mnist_relu_6_100.txt  mnist_relu_6_20.txt  mnist_relu_6_50.txt  mnist_relu_9_100.txt
benchmarks/FFNN_mnist/test/: accuracy.cpp  benchmark.cpp  parse_mnist_nn.h  tsc_x86.h  verify.cpp
benchmarks/Spiral_DFT/: CMakeLists.txt  build_and_run.py  main.cpp  readme.txt  run_igen.py
benchmarks/Spiral_DFT/igen/: ddi_AVX_DFT128.cpp  ddi_AVX_DFT16.cpp  ddi_AVX_DFT256.cpp  ddi_AVX_DFT32.cpp  ddi_AVX_DFT64.cpp  ddi_DFT128.cpp  ddi_DFT16.cpp  ddi_DFT256.cpp  ddi_DFT32.cpp  ddi_DFT64.cpp  f64i_AVX_DFT128.cpp  f64i_AVX_DFT16.cpp  f64i_AVX_DFT256.cpp  f64i_AVX_DFT32.cpp  f64i_AVX_DFT64.cpp  f64i_DFT128.cpp  f64i_DFT16.cpp  f64i_DFT256.cpp  f64i_DFT32.cpp  f64i_DFT64.cpp
benchmarks/Spiral_DFT/libraries/: DFT128_boost.cpp  DFT128_filib.cpp  DFT128_gaol.cpp  DFT128_yalaa.cpp  DFT16_boost.cpp  DFT16_filib.cpp  DFT16_gaol.cpp  DFT16_yalaa.cpp  DFT256_boost.cpp  DFT256_filib.cpp  DFT256_gaol.cpp  DFT256_yalaa.cpp  DFT32_boost.cpp  DFT32_filib.cpp  DFT32_gaol.cpp  DFT32_yalaa.cpp  DFT64_boost.cpp  DFT64_filib.cpp  DFT64_gaol.cpp  DFT64_yalaa.cpp  boost_common.h  filib_common.h  gaol_common.h  yalaa_wrap.h
benchmarks/Spiral_DFT/mpfr/: DFT16_mpfr.cpp  DFT64_mpfr.cpp
benchmarks/Spiral_DFT/results/: accuracy_dft64.csv  interval_perf.csv  overhead_dft64.csv  real_perf_dft64.csv
benchmarks/Spiral_DFT/spiral_source/: AVX_DFT128.cpp  AVX_DFT16.cpp  AVX_DFT256.cpp  AVX_DFT32.cpp  AVX_DFT64.cpp  DFT128.cpp  DFT16.cpp  DFT256.cpp  DFT32.cpp  DFT64.cpp
benchmarks/Spiral_DFT/tests/: accuracy.cpp  benchmark.cpp  cospi.cpp  include_tests.h  random_range.cpp  random_range.h  tsc_x86.h  verify.cpp  write_csv.h
common/: util.cpp  util.h
igen_lib/: igen_big_accumulator.h  igen_casts.h  igen_dd_casts.h  igen_dd_immintrin.h  igen_dd_immintrin_fallback.c  (+31 more)
src/: CMakeLists.txt  main.cpp
src/ASTVisitor/: ASTTraverser.cpp  ASTTraverser.h  ASTVisitor.cpp  ASTVisitor.h
src/extra/: pollyReduction.cpp  pollyReduction.h
src/frontend/: genReturnStmt.cpp  genReturnStmt.h  genVarDecl.cpp  genVarDecl.h
src/interval/: ASTAnalyzer.cpp  ASTAnalyzer.h  bopExpressions.cpp  bopExpressions.h  bopExpressionsMPFI.cpp  codeFragment.h  commonInterval.cpp  commonInterval.h  constantExpressions.cpp  constantExpressions.h  forStmtParser.cpp  forStmtParser.h  ifStmtParser.cpp  ifStmtParser.h  igenPragmaParser.cpp  igenPragmaParser.h  intervalExpression.cpp  intervalExpression.h  intrinsicExpression.cpp  intrinsicExpression.h  supportedIntrinsics.cpp  tempVariables.cpp  tempVariables.h  unaryOpExpressions.cpp  unaryOpExpressions.h  unaryOpExpressionsMPFI.cpp
src/utils/: util.cpp  util.h
(+21 files in other folders)
